@@ -24,6 +24,7 @@ last_name=Last Name
 manager_name=Manager's Name
 note=Notes
 number_of_children=Children
+position=Job Title
 postal_code_business=Business Postal Code
 postal_code_home=Home Postal Code
 postal_code_other=Other Postal Code
